skenarioA/deployment3-istio-splitting.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-secret
    hosts:
    - "latihan.sharing.gbesar.link"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "latihan.sharing.gbesar.link"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-splitting
spec:
  hosts:
  - "latihan.sharing.gbesar.link"
  gateways:
  - nginx-gateway
  http:
  - route:
    - destination:
        host: nginx-service
        port:
          number: 80
      weight: 50
    - destination:
        host: nginx2-service
        port:
          number: 80
      weight: 50
